index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100%;
  max-width: 100%;
  position: relative;
}

header {
  width: 100%;
  height: auto;
  position: relative;
  overflow: hidden;
}

.heading-pic-container {
  height: auto;
  width: 100%;
  max-width: 100%;
  padding: 1.5rem;
  position: relative;
}

.profile-img {
  position: relative;
  display: block;
  max-width: 100%;
  height: auto;
  margin: 0 auto;
  z-index: 3;
}

.diagonal-square-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vw;
  background-color: rgb(16, 91, 221);
  transform-origin: bottom;
  transform: rotate(-5deg) scale(3);
  z-index: 2;
}

.heading-title {
  font-size: 2rem;
  text-align: center;
  margin-bottom: 1rem;
  text-align: center;
}

.heading-desc {
  margin-bottom: 1rem;
}

.name {
  color: antiquewhite;
  position: absolute;
  z-index: 4;
  font-size: 3rem;
  top: 5%;
  left: 45%;
}

svg {
  height: 1.5rem;
  width: 1.5rem;
}

.socialmedia-div {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main-title-container {
  margin-top: 5rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main-title {
  text-align: center;
  font-size: 2rem;
}

.project-container-div {
  margin-top: 3rem;
  width: 100%;
  height: auto;
  box-shadow: 0 2px 2px 0;
}

.name-links-div {
  width: 100%;
  height: 1.5rem;
  margin-top: 1rem;
  padding: 0 10px 0 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.project-links {
  display: flex;
  height: auto;
  flex-direction: row;
  align-items: center;
  width: 3rem;
  justify-content: space-between;
}

.project-title {
  font-size: 1.5rem;
}

.project-desc {
  padding: 0 10px 0 10px;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.img-container {
  position: relative;
  width: 100%;
  height: 250px;
}

.project-screenshot {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  font-size: 1.5rem;
  color: antiquewhite;
}

#img-1 {
  background-color: rgb(10, 161, 111);
}

#img-2 {
  background-color: darkorange;
}

#img-3 {
  background-color: blueviolet;
}

#img-4 {
  background-color: darkgreen;
}

#img-5 {
  background-color: fuchsia;
}

#img-6 {
  background-color: lightslategray;
}

footer {
  margin-top: 5rem;
  background-color: rgb(10, 161, 111);
  width: 100%;
  height: fit-content;
  padding: 1rem;
  text-align: center;
  color: antiquewhite;
}

.footer-title {
  font-size: 2rem;
  margin-bottom: 1rem;
}

p {
  font-size: 1.5rem;
}

.footer-img-container {
  margin-top: 1rem;
  width: 100%;
  padding: 1rem;
  display: flex;
  justify-content: center;
}

.footer-img-container img {
  max-width: 100%;
  height: auto;
  display: block;
}

footer .project-links {
  width: 100%;
  margin-top: 1rem;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

footer svg {
  height: 2rem;
  width: 2rem;
  margin: 0 0.5rem;
}

@media (min-width: 720px) and (max-width: 1079px) {
  .heading-pic-container {
    height: 70vw;
  }

  .profile-img {
    position: absolute;
    max-width: 40%;
  }

  .diagonal-square-background {
    transform: rotate(-25deg) translateY(-55%) scale(4);
  }

  .name {
    position: absolute;
    max-width: 50%;
    font-size: 4rem;
    right: 20%;
    top: 10%;
  }

  header > svg {
    height: 1.5rem;
    width: 1.5rem;
  }

  .about-me {
    border: 1px solid black;
    background-color: aliceblue;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 0.5rem;
    max-width: 40%;
    position: absolute;
    top: 70%;
    right: 10%;
    z-index: 2;
    transform: translateY(-50%);
  }

  .heading-title {
    font-size: 2rem;
  }

  .heading-desc {
    font-size: 1rem;
  }

  .socialmedia-div svg {
    margin: 0 1rem 0 1rem;
    height: 3rem;
    width: 3rem;
  }

  .socialmedia-div {
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  .main-title {
    font-size: 3rem;
    margin-bottom: 1rem;
  }

  .responsive-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
    padding: 0 1rem;
    max-width: 100%;
  }

  .project-container-div {
    margin: 0;
    width: 100%;
    box-shadow:
      0 4px 8px 0 rgba(0, 0, 0, 0.2),
      0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }

  .footer-title {
    font-size: 3rem;
    margin-bottom: 1rem;
  }

  footer p {
    font-size: 1.5rem;
  }

  footer .project-links {
    width: 100%;
    margin-top: 1rem;
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  footer svg {
    height: 2rem;
    width: 2rem;
    margin: 0 0.5rem;
  }
}

@media (min-width: 1080px) {
  body {
    margin: 0 auto;
  }

  header {
    margin: 0 auto;
  }

  main {
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
  }

  .heading-pic-container {
    height: 70vw;
  }

  .profile-img {
    position: absolute;
    max-width: 35%;
    top: 10%;
    left: 5%;
    z-index: 2;
  }

  .diagonal-square-background {
    transform: rotate(-8deg) translateY(-45%) scale(4);
  }

  .name {
    position: absolute;
    max-width: 50%;
    font-size: 4rem;
    left: 6.5%;
    top: 70%;
    z-index: 2;
  }

  .about-me {
    border: 1px solid black;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    background-color: aliceblue;
    max-width: 50%;
    height: auto;
    position: absolute;
    top: 80%;
    right: 10%;
    z-index: 2;
    transform: translateY(-125%);
    padding: 1rem;
  }

  .heading-title {
    font-size: 3rem;
  }

  .heading-desc {
    font-size: 2rem;
  }

  .socialmedia-div svg {
    margin: 0 1rem 0 1rem;
    height: 2rem;
    width: 2rem;
  }

  .socialmedia-div {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
  }

  .main-title-container {
    margin-top: 0;
  }

  .main-title {
    font-size: 3rem;
    margin-bottom: 1rem;
  }

  .responsive-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
    padding: 0 1rem;
    max-width: 100%;
  }

  .project-container-div {
    margin: 0 0 1rem 0;
    width: 100%;
    box-shadow:
      0 4px 8px 0 rgba(0, 0, 0, 0.2),
      0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }

  footer {
    padding: 2rem;
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .footer-info-container {
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .footer-title {
    font-size: 3rem;
    margin-bottom: 1rem;
  }

  footer p {
    font-size: 1.5rem;
  }

  footer .project-links {
    width: 100%;
    margin-top: 1rem;
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  footer svg {
    height: 2rem;
    width: 2rem;
    margin: 0 0.5rem;
  }

  .footer-img-container {
    width: 50%;
    height: auto;
    display: block;
  }
}

